headers/x.h

typedef struct Ihandle_ Ihandle;
IUP_API Ihandle*  IupVboxv      (Ihandle* *children);
IUP_API Ihandle*  IupHboxv      (Ihandle* *children);
IUP_API Ihandle*  IupButton     (const char* title, const char* action);
IUP_API Ihandle*  IupLabel      (const char* title);
IUP_API Ihandle*  IupCalendar   (void);